# jax-resnet

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
jax_resnet/: __init__.py  common.py  pretrained.py  resnet.py  splat.py
tests/: test_pretrained.py  test_resnet.py
