[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[yapf]
based_on_style = google
column_limit = 88
blank_line_before_nested_class_or_def = false
split_before_arithmetic_operator = false

[flake8]
ignore = F405
max-line-length = 88
max-complexity = 15

[isort]
line_length = 88

[mypy]
ignore_missing_imports = True

[tool:pytest]
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')